Implemented dynamic tile population and opening of apps in new tab and iframe

--- a/customwebportal/webapp/manifest.json
+++ b/customwebportal/webapp/manifest.json
@@ -63,7 +63,7 @@
     "routing": {
       "config": {
         "routerClass": "sap.m.routing.Router",
-        "controlAggregation": "pages",
+        "controlAggregation": "content",
         "controlId": "app",
         "transition": "slide",
         "type": "View",
